--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.0.0'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
         applicationId "com.madx.updatechecker"
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 21
         versionCode 8
         versionName "1.0.7"
@@ -28,7 +28,7 @@ dependencies {
 //        }
     }
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.google.android.gms:play-services:+'
     compile 'com.github.danielemaddaluno.androidupdatechecker:library:+'
 //    compile project(':library')
